# MiniTractor

./: .gitignore  AGENTS.md  README.md  contexto.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: 01_Instalacion.md  02_Estructura_del_proyecto.md  03_Arquitectura.md  03_Comandos_frecuentes.md  04_Docker.md  05_Comandos_frecuentes.md  06_Recovery_behaviors.md
scripts/: build.sh  clean.sh  docker_build.sh  docker_shell.sh  docker_stop.sh  doctor.sh  nav_run.sh  nav_rviz.sh  obstacle_add.sh  obstacle_remove.sh  run.sh  sim_run.sh  sim_stop.sh  sim_teleop.sh  slam_run.sh  slam_save_map.sh  ws_build.sh  ws_clean.sh  ws_doctor.sh
scripts/lib/: common.sh
workspace/src/tractor_bringup/: CMakeLists.txt  package.xml
workspace/src/tractor_bringup/config/: nav2_params.yaml  slam_toolbox.yaml
workspace/src/tractor_bringup/launch/: sim_with_nav2.launch.py  sim_with_safety.launch.py  sim_with_slam.launch.py
workspace/src/tractor_bringup/models/caja_obstaculo/: model.sdf
workspace/src/tractor_bringup/rviz/: nav2.rviz
workspace/src/tractor_bringup/worlds/: huerto_papayos.world
workspace/src/tractor_description/: CMakeLists.txt  package.xml
workspace/src/tractor_description/config/: ros2_controllers.yaml
workspace/src/tractor_description/launch/: display.launch.py
workspace/src/tractor_description/urdf/: tractor.urdf.xacro  tractor_core.xacro  tractor_gazebo.xacro  tractor_properties.xacro  tractor_ros2_control.xacro  (+1 more)
workspace/src/tractor_safety/: package.xml  setup.cfg  setup.py
workspace/src/tractor_safety/tractor_safety/: safety_stop_node.py
