<?xml version="1.0"?>
<package format="3">
  <name>tractor_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for the tractor simulation</description>

  <maintainer email="ivan@example.com">ivan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tractor_description</exec_depend>
  <exec_depend>tractor_safety</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
