<?xml version="1.0"?>
<package format="3">
  <name>tractor_safety</name>
  <version>0.0.1</version>
  <description>Safety stop node for tractor LiDAR</description>

  <maintainer email="ivan@example.com">ivan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
